--- a/index.html
+++ b/index.html
@@ -3,18 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="icon" href="wolf.ico">
     <title>Teen Wolf</title>
-</head>
-<body class="badge-secondary">
 
+
+
+</head>
+<body>
+
+
+    <div class="night">
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+        <div class="shooting_star"></div>
+      </div>
+
+ <div class="div2">
     <center>
-        <img src="teen.webp" style="height: 600px;" class="img-fluid" >
+        <img src="teen.webp" style="height: 500px;" class="img-fluid" >
     </center>
     <br>
     <center>
-        <button class="btn btn-info"  style="width: 50%;">TEEN WOLF</button>
+        <button class="btn btn-dark "  style="width: 50%;">TEEN WOLF</button>
     </center>
+ </div>
+
+    
+
 </body>
 </html>
