--- a/index.html
+++ b/index.html
@@ -42,24 +42,12 @@
         <img src="teen.webp" style="height: 500px;" class="img-fluid" >
     </center>
     <br>
-    <div>
+    <center>
         <button class="btn btn-dark "  style="width: 50%;">TEEN WOLF</button>
-    </div>
+    </center>
  </div>
 
     
-
-
- <style>
-    /* Estilos personalizados para dispositivos móviles */
-    @media (max-width: 768px) {
-        /* Ajusta el tamaño de la imagen para dispositivos móviles */
-        .div2 img {
-            max-width: 100%;
-            height: auto;
-        }
-    }
-</style>
 
 </body>
 </html>
