--- a/index.html
+++ b/index.html
@@ -7,45 +7,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="icon" href="wolf.ico">
     <title>Teen Wolf</title>
-
-
-
 </head>
+
+<br>
 <body>
 
-
-    <div class="night">
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-        <div class="shooting_star"></div>
-      </div>
-
- <div class="div2">
     <center>
         <img src="teen.webp" style="height: 500px;" class="img-fluid" >
     </center>
     <br>
     <center>
-        <button class="btn btn-dark "  style="width: 50%;">TEEN WOLF</button>
+        <button class="btn btn-secondary"  style="width: 50%;"><span>TEEN WOLF</span></button>
     </center>
- </div>
 
     
 
