--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </center>
     <br>
     <center>
-        <button class="btn btn-secondary"  style="width: 50%;"><span>TEEN WOLF</span></button>
+        <button class="btn btn-secondary"  style="width: 50%;">TEEN WOLF</button>
     </center>
 
     
