--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#2922AC">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="icon" href="wolf.ico">
@@ -17,10 +19,13 @@
     </center>
     <br>
     <center>
-        <button class="btn btn-secondary"  style="width: 50%;">TEEN WOLF</button>
+        <a class="btn btn-secondary" style="width: 50%;" href="personaje.html">TEEN WOLF</a>
     </center>
 
     
 
+
+    <script src="appWolf.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
