--- a/personaje.html
+++ b/personaje.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#2922AC">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="wolf.ico">
     <title>Personajes</title>
 </head>
 <body>
     <br>
+    <div class="position-absolute top-0 start-0">
+        <a class="" href="index.html"><img src="img/back.png" alt=""></a>
+    </div>
+    <br><br>
     <div class="container">
         <h3 class="text-white">Pesonajes</h3>
         <select name="opciones" id="opciones" class="form-control" required>
@@ -29,7 +33,18 @@
     </div>
     <br>
     <center>
-        <img src="logo.jpg" class="img-fluid" id="portada" alt="">
+        <a href="" id="detalles"><img src="logo.jpg" class="img-fluid" id="portada" alt=""></a>
+    </center>
+    <h4 class="text-white text-center" id="nombrePersonaje"></h4>
+
+    <div class="container">
+        <select name="estado" id="estado" class="form-control" required>
+            <option value=""></option>
+        </select>
+    </div>
+
+    <center>
+        <img src="" id="poderes" class="img-fluid" alt="">
     </center>
 
 
