--- a/personaje.html
+++ b/personaje.html
@@ -31,11 +31,8 @@
             <option value="Sheriff Noah Stilinski">Sheriff Noah Stilinski</option>
         </select>
     </div>
+
     <br>
-    <center>
-        <a href="" id="detalles"><img src="logo.jpg" class="img-fluid" id="portada" alt=""></a>
-    </center>
-    <h4 class="text-white text-center" id="nombrePersonaje"></h4>
 
     <div class="container">
         <select name="estado" id="estado" class="form-control" required>
@@ -43,13 +40,20 @@
         </select>
     </div>
 
+
+    <br>
     <center>
-        <img src="" id="poderes" class="img-fluid" alt="">
+        <a href="" id="detalles"><img src="logo.jpg" class="img-fluid" id="portada" alt=""></a>
     </center>
+    <h4 class="text-white text-center" id="nombrePersonaje"></h4>
+
 
 
 
     <script src="appWolf.js"></script>
     <script src="app.js"></script>
+    <script src="js/pouchdb-nightly.js"></script>
+    <script src="js/base.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>l
